# sdl_game

./: .gitignore  CMakeLists.txt  Dockerfile  Doxyfile  FindSDL2.cmake  README.md  build.cmake  config.hpp.cmake  doxygen.cmake  menu_config.hpp.cmake
resources/: bombino_objects.xml  bombino_states.xml  bombino_textures.xml  map1.tmx  maps.xml  menus_textures.xml  sounds.xml
shaders/: fragment_shader.glsl  general_fragment_shader.glsl  general_vertex_shader.glsl  texture_multiply_fragment_shader.glsl  texture_multiply_vertex_shader.glsl  vertex_shader.glsl
src/: .clang_complete  triangles.xml
src/base64/: CMakeLists.txt
src/base64/sources/: base64.cpp
src/bombino/: CMakeLists.txt  objects_config.hpp.cmake
src/bombino/include/: bomb.hpp  callback_map.hpp  flame.hpp  gamer.hpp  menu_state.hpp  object_factory.hpp  object_manager.hpp  object_types.hpp  over_state.hpp  pause_state.hpp  playing_state.hpp  power.hpp  tile.hpp  tile_loader.hpp
src/bombino/sources/: bomb.cpp  callback_map.cpp  flame.cpp  gamer.cpp  menu_state.cpp  object_factory.cpp  object_manager.cpp  over_state.cpp  pause_state.cpp  playing_state.cpp  power.cpp  tile.cpp  tile_loader.cpp
src/engine/: CMakeLists.txt  shaders_config.hpp.cmake
src/engine/include/: abstract_object.hpp  button.hpp  dop_clases.hpp  engine.hpp  enums.hpp  event.hpp  get_file_line_func.hpp  gl_loader.hpp  input_handler.hpp  light.hpp  load_png.hpp  menu_imgui.hpp  player.hpp  scene.hpp  state_machine.hpp  texture.hpp  texture_manager.hpp  time.hpp  triangles_parser.hpp  vertex.hpp
src/engine/sources/: abstract_object.cpp  button.cpp  engine.cpp  event.cpp  gl_loader.cpp  input_handler.cpp  light.cpp  load_png.cpp  menu_imgui.cpp  player.cpp  scene.cpp  state_machine.cpp  texture.cpp  texture_manager.cpp  time.cpp  triangles_parser.cpp
src/game/: CMakeLists.txt
src/game/include/: button.hpp  menu_state.hpp  object_factory.hpp  pause_state.hpp  playing_state.hpp  shiep.hpp  state_parser.hpp
src/game/sources/: button.cpp  menu_state.cpp  object_factory.cpp  pause_state.cpp  playing_state.cpp  shiep.cpp  state_parser.cpp
src/imgui/: CMakeLists.txt
src/imgui/include/: gl3w.h  gl_funcs.hpp  imgui_impl_sdl.h  imgui_internal.h
src/imgui/sources/: gl3w.c  imgui_impl_sdl.cpp
src/main/: CMakeLists.txt  main.cpp
src/math_2d/: CMakeLists.txt
src/math_2d/include/: circle.hpp  mat33.hpp  rect.hpp  size.hpp  vector2d.hpp  vertex.hpp
src/math_2d/sources/: circle.cpp  mat33.cpp  rect.cpp  size.cpp  vector2d.cpp  vertex.cpp
src/math_2d/test/: boost_test_math2d.cpp  test_math2d.cpp
src/resources/: bombino_objects.xml  bombino_states.xml  bombino_textures.xml  collection.xml  deep_space_states.xml  deep_space_textures.xml  map0.tmx  menus_textures.xml  sounds.xml  textures.xml
src/resources/bomber/: map0.tmx
src/shaders/: fragment_shader  fragment_shader.glsl  vertex_shader
